<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.eseo.i2.prose.ea1.whereisrob.gui.CartographerFragment">

    <fr.eseo.i2.prose.ea1.whereisrob.gui.CartographerView
        android:id="@+id/cartographerview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:paddingTop="20dp"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:text="+4m"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="-4m"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="2dp"
        android:paddingStart="40dp"
        android:paddingEnd="0dp"
        android:text="+4m"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:paddingBottom="2dp"
        android:paddingStart="40dp"
        android:paddingEnd="0dp"
        android:text="-4m"
        android:visibility="visible" />

</FrameLayout>