<resources>
    <string name="app_name">WhereIsRob</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WhereIsRob</string>
    <string name="nav_header_subtitle">ProSE</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_test">Test</string>
...
    <string name="deconnectMessageYes">Êtes-vous sûr de vouloir déconnecter WhereIsRob de RobSoft ?</string>
    <string name="deconnectMessageNo">Êtes-vous sûr de vouloir annuler la connexion ?</string>
    <string name="stopTest">Le test est terminé</string>
    <string name="connectionLostTitle">WhereIsRob a perdu la connexion avec RobSoft</string>
    <string name="connectionLostMessage">Veuillez vous reconnecter</string>
    <string name="connecting">Connexion...</string>
    <string name="validate">VALIDER</string>
    <string name="cancel">ANNULER</string>
    <string name="testLayoutTitle">Test</string>
    <string name="pilotLayoutTitle">Pilotage manuel</string>
    <string name="historianLayoutTitle">Historique</string>
    <string name="helpTestTitle">Pour exécuter un test :</string>
    <string name="helpPilotTitle">Pour piloter Rob :</string>
...
